--- a/src/layouts/post.njk
+++ b/src/layouts/post.njk
@@ -26,6 +26,8 @@ layout: base.njk
       {% endfor %}
     </div>
 
+    {% include "utterances.njk" %}
+    
     <nav class="post__pagination">
       {%- set nextPost = collections.posts | getNextCollectionItem(page) %}
       {%- if nextPost %}
