--- a/src/includes/utterances.njk
+++ b/src/includes/utterances.njk
@@ -3,4 +3,11 @@
   margin-left: inherit !important;
 }
 </style>
-<script src="https://utteranc.es/client.js" repo="derekvincent/derekvincent.github.io" issue-term="title" crossorigin="anonymous" async></script>
+<script src="https://utteranc.es/client.js"
+        repo="derekvincent/derekvincent.github.io"
+        issue-term="title"
+        label="Comment"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
