--- a/src/css/post.css
+++ b/src/css/post.css
@@ -21,6 +21,21 @@
   word-wrap: break-word;
 }
 
+.post__insert {
+  background-color: #F6F8Fa;
+  border: 2px solid #E1E4E8;
+  position: relative;
+  padding: 1.5rem 1rem;
+  margin-left: -1rem;
+  margin-top: 3rem;
+  border-radius: 6pt;
+  width: 100%;
+  margin-left: auto;
+  margin-top: 2rem;
+  padding: 1.5rem 1.5rem 1.5rem 1.5rem;
+
+}
+
 .post__aside {
   margin-top: 2rem;
 }
