Add reddit share and twitter:alt meta tags

--- a/src/includes/post-insert.njk
+++ b/src/includes/post-insert.njk
@@ -1,11 +1,16 @@
 <div class="post__insert">
     <p>
-        <b>You made it this far!</b> If you enjoyed and fell other may find it usefull you can 
+        <b>You made it this far!</b> If you enjoyed or think others may find it usefull you can 
         <a
             target="_blank"
             rel="noopener noreferrer"
             href="https://twitter.com/intent/tweet?text={{ encodedPostTitle }}&url={{ encodedPostUrl }}&via=derekvincent__">tweet this
             article</a>
+            , post this to your 
+        <a 
+            target="_blank"
+            rel="nofollow noopener"
+            href="https://reddit.com/submit?url={{ encodedPostUrl }}&title={{ encodedPostTitle }}"  >favorite subreddit</a>
         or
             <a
             target="_blank"
