Change to the socia-card.njk for the description

--- a/src/includes/social-cards.njk
+++ b/src/includes/social-cards.njk
@@ -1,7 +1,4 @@
-{% set desc = description %}
-{% if not desc %}
-    {% set desc = content | striptags | truncate(140) %}
-{% endif %}
+{% set desc = description | striptags | truncate(140) %}
 
 {% set imgTitle %}{{ title | slug }}{% endset %}
 {% set socialHtml%}
